--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "url": "https://github.com/almod90/ttm-test-1/issues"
   },
   "homepage": "https://github.com/almod90/ttm-test-1#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack-cli": "^3.3.9",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.9.0"
-  },
-  "devDependencies": {
-    "webpack-cli": "^3.3.9"
   }
 }
