--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
   },
   "homepage": "https://github.com/almod90/ttm-test-1#readme",
   "dependencies": {
-    "bootstrap": "^4.3.1"
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.17.0",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "webpack-cli": "^3.3.9",
     "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
   }
 }
